@@ -167,6 +167,13 @@ stopifnot(sz < 2000)
 ## PR 1010: plot.mts (type="p") was broken in 1.3.0 and this call failed.
 plot(ts(matrix(runif(10), ncol = 2)), type = "p")
 
+## in 1.3.0 readLines(ok=FALSE) failed.
+cat(file="foo", 1:10, sep="\n")
+x <- try(readLines("foo", 100, ok=FALSE))
+unlink("foo")
+stopifnot(length(class(x)) == 1 &&class(x) == "try-error")
+
+
 
 ## PR 902 segfaults when warning string is too long, Ben Bolker 2001-04-09
 provoke.bug <- function(n=9000) {
